<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/shoppingbag"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_very_small"
        android:text="@string/register"
        android:textColor="#104E5B"
        android:textSize="@dimen/text_title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_very_small"
        android:text="@string/create_an_account"
        android:textColor="#616F80"
        android:textSize="@dimen/text_size_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_small"
        android:background="@drawable/shape_singin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_layout_firs_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/first_name"
            app:boxCornerRadiusBottomEnd="@dimen/margin_small"
            app:boxCornerRadiusBottomStart="@dimen/margin_small"
            app:boxCornerRadiusTopEnd="@dimen/margin_small"
            app:boxCornerRadiusTopStart="@dimen/margin_small"
            app:boxStrokeColor="#03A9F4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_first_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:textColor="#104E5B" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_layout_last_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/last_name"
            app:boxCornerRadiusBottomEnd="@dimen/margin_small"
            app:boxCornerRadiusBottomStart="@dimen/margin_small"
            app:boxCornerRadiusTopEnd="@dimen/margin_small"
            app:boxCornerRadiusTopStart="@dimen/margin_small"
            app:boxStrokeColor="#03A9F4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_last_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:textColor="#104E5B" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_layout_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="@string/phone"
            app:boxCornerRadiusBottomEnd="@dimen/margin_small"
            app:boxCornerRadiusBottomStart="@dimen/margin_small"
            app:boxCornerRadiusTopEnd="@dimen/margin_small"
            app:boxCornerRadiusTopStart="@dimen/margin_small"
            app:boxStrokeColor="#03A9F4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:inputType="phone"
                android:textColor="#104E5B" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="Password"
            app:boxCornerRadiusBottomEnd="@dimen/margin_small"
            app:boxCornerRadiusBottomStart="@dimen/margin_small"
            app:boxCornerRadiusTopEnd="@dimen/margin_small"
            app:boxCornerRadiusTopStart="@dimen/margin_small"
            app:boxStrokeColor="#03A9F4"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:inputType="numberPassword"
                android:textColor="#104E5B" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_layout_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_big"
            android:layout_marginTop="@dimen/margin_small"
            android:hint="Confirm Password"
            app:boxCornerRadiusBottomEnd="@dimen/margin_small"
            app:boxCornerRadiusBottomStart="@dimen/margin_small"
            app:boxCornerRadiusTopEnd="@dimen/margin_small"
            app:boxCornerRadiusTopStart="@dimen/margin_small"
            app:boxStrokeColor="#03A9F4"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:inputType="numberPassword"
                android:textColor="#104E5B" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/button_register"
                android:layout_width="240dp"
                android:layout_height="?actionBarSize"
                android:layout_marginHorizontal="@dimen/margin_small"
                android:background="@drawable/outline_button"
                android:gravity="center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="SingUp"
                android:textColor="#000"
                android:textSize="20sp"
                app:cornerRadius="@dimen/margin_small"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>